# envfiles

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  azure-pipelines.yml  makefile  noxfile.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
requirements/: base.in  dev.txt  test.txt
scripts/: publish.sh
src/envfiles/: __init__.py  envfiles.py
tests/: test_envfiles.py
tests/assets/: base.env  test.env
