[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "envfiles"
dynamic = ["version"]
description = "Simple layered loading of env files"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["environment", "variables", "12-factor"]
authors = [
  {name = "Yeray Díaz", email = "yeraydiazdiaz@gmail.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.6, <4"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-mock",
  "pytest-cov",
]
dev = [
  "black",
  "flake8",
  "flake8-bugbear",
  "flake8-comprehensions",
  "flake8-pie",
  "ipython",
  "mypy",
  "pdbpp",
  "wheel",
  "isort",
  "devtools[pygments]",
  "nox",
]

[project.urls]
"Code" = "https://github.com/yeraydiazdiaz/envfiles"
"Issue tracker" = "https://github.com/yeraydiazdiaz/envfiles/issues"
"Changelog" = "https://github.com/yeraydiazdiaz/envfiles/blob/master/CHANGELOG.md"

[tool.isort]
atomic = true
force_grid_wrap = 0
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true
known_first_party = "envfiles,tests"
known_third_party = ["nox", "pytest"]

[tool.pytest.ini_options]
minversion = 3.0
addopts = "-ra --cov=envfiles --cov-report=term-missing --cov-fail-under=100"
testpaths = "tests"
markers = "integration"
