[bdist_wheel]
universal = 1


[metadata]
# ensure LICENSE is included in wheel metadata
license_file = LICENSE


[tool:pytest]
minversion = 3.0
strict = true
addopts = -ra --cov=envfiles --cov-report=term-missing --cov-fail-under=100
testpaths = tests
markers = integration


[flake8]
max-line-length = 92
ignore=E203  # whitespace before : in slices, Black adds them


[isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
not_skip=__init__.py
use_parentheses=true
known_first_party = envfiles,tests
known_third_party = nox,pytest,setuptools
